# hydranet

./: .gitignore  404.html  Dockerfile  README.md  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: build_docker.yaml  check_link.yaml  ci.yaml  documentation.yaml
.github/workflows/docker/: Dockerfile
.github/workflows/docker/tensorrt/: Dockerfile  to_trt.py
docs/: home.md  index.md
docs/models/: bifpn.md  regnet.md  regnet_head.md
hydranet/: train.py
hydranet/models/: bbox_detection_head_model.py  bifpn.py  bifpn_model.py  hydranet.py  hydranet_model.py  losses.py  module.py  regnet.py  regnet_head.py  regnet_model.py  retinahead_model.py  util.py
models/: bifpn.onnx
models/bifpn/: index.html
models/regnet/: index.html
models/regnet_head/: index.html
search/: search_index.json
tests/models/: bifpn_test.py  regnet_test.py
